src/components/responsive/responsive.css
/* LANDSCAPE TABLET VIEW */

.App.tablet-view .mbua-wrapper {
  width: 100%;
  height: 100%;
}

.App.tablet-view #mbua {
  align-items: center;
}

.App.tablet-view .slider-wrapper {
  width: 310px;
  height: 620px;
  margin: 0px;
}

.App.tablet-view img.mbua-slider-img {
  height: 620px;
  width: 620px;
}

.App.tablet-view #mbua-first-column,
.App.tablet-view #mbua-second-column,
.App.tablet-view #mbua-third-column {
  height: 620px;
  width: 310px;
}
.App.tablet-view #mbua-fourth-column {
  height: 620px;
  width: 94px;
}
.App.tablet-view #mbua-third-column {
  padding: 0px;
  margin-left: 30px;
  margin-right: 0px;
  overflow-x: hidden;
}

.App.tablet-view .slider-wrapper.large-slider {
  width: 620px;
}

.App.tablet-view .title {
  font-size: 1.15rem;
  font-weight: 500;
  margin: 0px 20px;
}

.App.tablet-view #main-menu li {
  margin-right: 20px;
}

.App.tablet-view #slider-counter {
  margin-right: 30px;
}
.App.tablet-view #Slider-buttons {
  bottom: 0px;
}
.App.tablet-view #plus-button-slider {
  right: -50px;
  bottom: 5px;
}
.App.tablet-view #ProfilesMenu {
    bottom: -1px;
    width: 310px;
}

